
  * Thiemo Seufer
    - Create MAINFEST for mipsel.
    - Add mini-ISO targets for mips, mipsel.
    - Small Makefile cleanup.
    - Unbreak i386 mini-ISO generation.
  * Jeff Bailey
    - sparc: Add manifest lines to configuration file.
    - ia64: Add manifest lines to configuration file.
    - Bump mklibs dependancy to 0.1.15.  Fixes needed for sparc.
  * Stephen R. Marenka
    - m68k mac build fixes.

 -- Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>  Tue, 10 Feb 2004 07:27:46 +0100

debian-installer (20040209) unstable; urgency=low

  * Steve Langasek
    - Use -di flavored kernels for alpha
    - build-depend on aboot for alpha (needed for making
      floppies/CDs bootable)
    - include srm-modules and socket-modules in the alpha initrd
    - tell d-i that alpha CDROMs don't use a floppy image, just an
      initrd and kernel
    - upgrade to 2.4.24 for alpha kernels
  * Thiemo Seufer
    - Remove dead apt-get code in the Makefile.
    - Redesigned build system. Major changes to the configuration
      handling for all architectures. Closes: #215508
    - Remove arhcdetect from m68k config, it is already in the generic
      config.
    - Fix broken alpha build, input-modules isn't created for -di
      kernel flavour.
    - Adjust daily-build script for the new build system.
    - Remove special handling for "default", it was broken anyway.
    - Switch back sparc kernel handling in tftpboot.sh to the old value.
    - Add support for MANIFEST files. Closes: #231767
    - Fix genromfs invocation, found by Thomas Poindessous.
  * Thomas Poindessous
    - Remove redundant kbd-chooser from netboot pkg-list.
    - Add discover, discover-data to sparc netboot image. Closes: #227853
    - Correct netboot image building on sparc. Closes: #228519
  * Joey Hess
    - Copyright date updates.
    - Add wireless-tools to the net_drivers floppy and the netboot initrd.
    - Switch the kernel to 2.4.24 for i386.